# code-refactoring

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/refact/: statement.py
tests/: test_with_approvals.py  test_with_approvals.test_with_approvals.approved.txt
